# libseek-thermal

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  calculations.ods  libseek.pc  libseek.pc.make  variables.mk
.github/workflows/: cmake.yml
cmake/: FindLibUSB.cmake  build_type.cmake
examples/: CMakeLists.txt  args.h  seek_create_flat_field.cpp  seek_snapshot.cpp  seek_test.cpp  seek_test_pro.cpp  seek_viewer.cpp
lib/: Makefile  SeekCam.cpp  SeekCam.h  SeekDebug.h  SeekDevice.cpp  SeekDevice.h  SeekDeviceFile.cpp  SeekLogging.h  SeekThermal.cpp  SeekThermal.h  SeekThermalPro.cpp  SeekThermalPro.h  seek.h
src/: CMakeLists.txt  SeekCam.cpp  SeekCam.h  SeekDevice.cpp  SeekDevice.h  SeekThermal.cpp  SeekThermal.h  SeekThermalPro.cpp  SeekThermalPro.h
